--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "portifolioemmy",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,7 +13,7 @@
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-ga": "^3.1.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^2.1.3",
     "react-switch": "^5.0.1",
     "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.3.1"
